# alpha0fromscratch

./: .gitignore  alphazero.py  connectfour.py  game_env.py  main.py  mcts.py  networks.py  tictactoe.py
checkpoints/: model.pth
cpp/: CMakeLists.txt  Makefile  botBattle.cpp  main.cpp
cpp/algorithms/: alphazero.cpp  alphazero.h  mcts.cpp  mcts.h
cpp/games/: GameEnv.cpp  GameEnv.h
cpp/games/ConnectFour/: ConnectFour.cpp  ConnectFour.h
cpp/games/TicTacToe/: TicTacToe.cpp  TicTacToe.h
